tests/ui/const-generics/intrinsics-type_name-as-const-argument.min.stderr
error: generic parameters may not be used in const operations
  --> $DIR/intrinsics-type_name-as-const-argument.rs:14:45
   |
LL |     T: Trait<{ std::intrinsics::type_name::<T>() }>,
   |                                             ^ cannot perform const operation using `T`
   |
   = note: type parameters may not be used in const expressions
   = help: add `#![feature(generic_const_exprs)]` to allow generic const expressions

error: `&'static str` is forbidden as the type of a const generic parameter
  --> $DIR/intrinsics-type_name-as-const-argument.rs:9:22
   |
LL | trait Trait<const S: &'static str> {}
   |                      ^^^^^^^^^^^^
   |
   = note: the only supported types are integers, `bool`, and `char`
help: add `#![feature(adt_const_params)]` to the crate attributes to enable more complex and user defined types
   |
LL + #![feature(adt_const_params)]
   |
help: add `#![feature(unsized_const_params)]` to the crate attributes to enable references to implement the `ConstParamTy` trait
   |
LL + #![feature(unsized_const_params)]
   |

error: aborting due to 2 previous errors

